--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/react-datepicker": "4.4.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-datepicker": "4.8.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
   },
