--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/react-datepicker": "4.4.2",
+    "axios": "0.27.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-datepicker": "4.8.0",
